--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+# shell
+set-option -g default-shell /bin/bash
 set-window-option -g mode-keys vi
 set-option -g repeat-time 0
 set -g default-terminal "screen-256color"
